# Seeed

./: README.md
docs/: tips.md
hardware/ReSpeaker XVF3800/: requirements.txt
hardware/ReSpeaker XVF3800/scripts/: main.py  r818.pcm  reply.pcm  speechmanager.py
hardware/lerobot/: build_pytorch_jetson.sh  build_torchvision_jetson.sh  install_pyrealsense2.sh
mapping_navigation/lekiwi/: .setup_assistant  CMakeLists.txt  package.xml
mapping_navigation/lekiwi/config/: controllers.yaml  initial_positions.yaml  joint_limits.yaml  lekiwi.ros2_control.xacro  lekiwi.srdf  lekiwi.urdf.xacro  moveit.rviz  moveit_controllers.yaml  nav2_params.yaml  ros2_controllers.yaml  urdf.rviz
mapping_navigation/lekiwi/launch/: cameras.launch.py  gz.launch.py  hardware.launch.py  lekiwi_full.launch.py  motion_planning.launch.py  nav2_bringup.launch.py  navigation.launch.py  robot_hardware.launch.py  rviz.launch.py  visualization.launch.py
mapping_navigation/lekiwi/urdf/: lekiwi.urdf  lekiwi_5dof.urdf  lekiwi_complete.urdf  so_100_arm_5dof.urdf
mapping_navigation/lekiwi_hardware/: CMakeLists.txt  lekiwi_hardware.xml  package.xml
mapping_navigation/lekiwi_hardware/config/: hardware_config.yaml  joint_offsets.yaml
mapping_navigation/lekiwi_hardware/scripts/: calibrate_arm.py  holonomic_controller.py  jog_joints.py  manual_holonomic.py  odometry_publisher.py  test_holonomic.py  test_odometry.py  test_safety_timeout.py  test_wheel_velocity.py  zero_pose.py
mapping_navigation/lekiwi_hardware/src/: lekiwi_interface.cpp
mapping_navigation/lekiwi_hardware/test/: ping_test.cpp  (+1 more)
(+19 files in other folders)
